_sass/theme.scss
/* ... */
pre code {
  padding: 0;
  font-size: 100%;
  color: inherit;
  background-color: transparent;
  border: none;
  font-weight: normal;
}

/* Pygments via Jekyll */
.highlight {
  margin-bottom: 1rem;
  border-radius: 4px;
}
.highlight pre {
  margin-bottom: 0;
}

/* Quotes */
blockquote {
  padding: .5rem 1rem;
  margin: .8rem 0;
  color: var(--blockquote-color);
  border-left: .25rem solid var(--blockquote-border);
}
blockquote p:last-child {
  margin-bottom: 0;
}
@media (min-width: 30em) {
  blockquote {
    padding-right: 4rem;
    padding-left: 1.25rem;
  }
}

img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}

/* Tables */
table {
  margin-bottom: 1rem;
  width: 100%;
  border: 1px solid var(--table-border);
  border-collapse: collapse;
  table-layout: fixed;
}
td,
th {
  padding: .25rem .5rem;
  border: 1px solid var(--table-border);
}
tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: var(--table-stripe-bg);
}

figure {
  margin-left: 0rem;
}



/*
 * Wrapper
 *
 * The wrapper is used to position site content when the sidebar is toggled. We
 * use an outter wrap to position the sidebar without interferring with the
 * regular page content.
 */

.wrap {
  position: relative;
  width: 100%;
}


/*
 * Container
 *
 * Center the page content.
 */

.container {
  max-width: 28rem;
  padding-left:  1rem;
  padding-right: 1rem;
  margin-left:  auto;
  margin-right: auto;
}
@media (min-width: 38em) {
  .container {
    max-width: 36rem;
    padding-left:  2rem;
  }
}
@media (min-width: 58em) {
  .container {
    max-width: 50rem;
  }
}


/*
 * Masthead
 *
 * Super small header above the content for site name and short description.
 */

.masthead {
  padding-top:    1rem;
  padding-bottom: 1rem;
  margin-bottom: 2rem;
  border-bottom: 1px solid var(--masthead-border-bottom);
  border-top: 5px solid var(--masthead-border-top);
}
.masthead-title {
  margin-top: 0;
  margin-bottom: 0;
  color: var(--masthead-title-color);
}
.masthead-title a {
  color: var(--masthead-title-color);
  font-size: 1.5rem;
  margin-right: 0.25rem;
}
.masthead-title small {
  font-size: 75%;
  font-weight: 400;
  color: var(--masthead-tagline-color);
  letter-spacing: 0;
}

@media (max-width: 50em) {
  .masthead-title {
    text-align: center;
  }
  .masthead-title small {
    display: none;
  }
}


/*
 * Sidebar
 *
 * The sidebar is the drawer, the item we are toggling with our handy hamburger
 * button in the corner of the page.
 *
 * This particular sidebar implementation was inspired by Chris Coyier's
 * "Offcanvas Menu with CSS Target" article, and the checkbox variation from the
 * comments by a reader. It modifies both implementations to continue using the
 * checkbox (no change in URL means no polluted browser history), but this uses
 * `position` for the menu to avoid some potential content reflow issues.
 *
 * Source: http://css-tricks.com/off-canvas-menu-with-css-target/#comment-207504
 */

/* Style and "hide" the sidebar */
.sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: -14rem;
  width: 14rem;
  visibility: hidden;
  overflow-y: auto;
  font-size: .875rem; /* 15px */
  color: var(--sidebar-color);
  background-color: var(--sidebar-bg);
  transition: all .3s ease-in-out;
}
@media (min-width: 30em) {
  .sidebar {
    font-size: .75rem; /* 14px */
  }
}

/* Sidebar content */
.sidebar a {
  font-weight: normal;
  color: var(--sidebar-link-color);
}
.sidebar-item {
  padding: 1rem;
}
.sidebar-item p:last-child {
  margin-bottom: 0;
}

/* Sidebar nav */
.sidebar-nav {
  border-bottom: 1px solid var(--sidebar-border);
}
.sidebar-nav-item {
  display: block;
  padding: .5rem 1rem;
  border-top: 1px solid var(--sidebar-border);
}
.sidebar-nav-item.active,
a.sidebar-nav-item:hover,
a.sidebar-nav-item:focus {
  text-decoration: none;
  background-color: rgba(255,255,255,.1);
  border-color: transparent;
}

@media (min-width: 50em) {
  .sidebar-item {
    padding: 1.5rem;
  }
  .sidebar-nav-item {
    padding-left:  1.5rem;
    padding-right: 1.5rem;
  }
}

/* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
.sidebar-checkbox {
  display: none;
}

/* Style the `label` that we use to target the `.sidebar-checkbox` */
.sidebar-toggle {
  position: absolute;
  top:  .8rem;
  left: 1rem;
  display: block;
  padding: .25rem .75rem;
  color: var(--sidebar-toggle-color);
  background-color: var(--sidebar-toggle-bg);
  border-radius: .25rem;
  cursor: pointer;
  border: none;
  outline: none;
  transition: background-color 0.2s ease;

  &:hover {
    background-color: var(--sidebar-toggle-active-bg);
  }
}

.sidebar-toggle:before {
  display: inline-block;
  width: 1rem;
  height: .75rem;
  content: "";
  background-image: linear-gradient(to bottom,
    var(--sidebar-toggle-color), var(--sidebar-toggle-color) 12.5%,
    transparent 12.5%, transparent 43.75%,
    var(--sidebar-toggle-color) 43.75%, var(--sidebar-toggle-color) 56.25%,
    transparent 56.25%, transparent 87.5%,
    var(--sidebar-toggle-color) 87.5%, var(--sidebar-toggle-color) 100%);
}

.sidebar-toggle:active,
#sidebar-checkbox:focus ~ .sidebar-toggle,
#sidebar-checkbox:checked ~ .sidebar-toggle {
  color: var(--sidebar-toggle-active-color);
  background-color: var(--sidebar-toggle-active-bg);
}

.sidebar-toggle:active:before,
#sidebar-checkbox:focus ~ .sidebar-toggle:before,
#sidebar-checkbox:checked ~ .sidebar-toggle:before {
  background-image: linear-gradient(to bottom,
    var(--sidebar-toggle-active-color), var(--sidebar-toggle-active-color) 12.5%,
    transparent 12.5%, transparent 43.75%,
    var(--sidebar-toggle-active-color) 43.75%, var(--sidebar-toggle-active-color) 56.25%,
    transparent 56.25%, transparent 87.5%,
    var(--sidebar-toggle-active-color) 87.5%, var(--sidebar-toggle-active-color) 100%);
}

@media (min-width: 30.1em) {
  .sidebar-toggle {
    position: fixed;
  }
}

@media print {
  .sidebar-toggle {
    display: none;
  }
}
/* ... */

